--- a/demo/contact.html
+++ b/demo/contact.html
@@ -91,16 +91,7 @@
 				</div>
 				<div class="col-lg-5 col-md-4 col-sm-4 col-12">
 					<div class="login-area">
-						<div class="seclict-area">
-							<img src="img/flg.png" alt="">
-							<select name="cars">
-								<option value="volvo">USA</option>
-								<option value="saab">BAN</option>
-								<option value="fiat">BAN</option>
-								<option value="audi">BAN</option>
-							</select>
-							<i class="fas fa-angle-down"></i>
-						</div>
+						
 						<div class="user-log">
 							<i class="far fa-user-circle"></i>
 							<a href="#">Sign In</a>
@@ -126,13 +117,8 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav">
 						<li class="nav-item dropdown">
-							<a class="nav-link" href="#">Home</a>
-							<div class="dropdown-content">
-								<a href="index.html">Home 01</a>
-								<a href="index-2.html">Home 02</a>
-								<a href="index-3.html">Home 03</a>
-								<a href="index-4.html">Home 04</a>
-							</div>
+							<a class="nav-link" href="index.html">Home</a>
+							
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link " href="#">Trip Package</a>
